--- a/style.css
+++ b/style.css
@@ -1,14 +1,58 @@
+body{
+   margin: 0px;
+
+}
+
+
 #Navegacion{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
 }
 .Logos{
-   width: 60px;
-   height: 50px;
+   width: 50px;
+   height: 40px;
    border-radius: 30%;
 }
 .Argentina-Programa{
-   font-size: 20px;
+   font-size: 15px;
    font-family: 'Edu NSW ACT Foundation', cursive;
+   margin-left: 0px;
+   color: white;
+}
+.Secciones{
+   font-family: 'Edu NSW ACT Foundation', cursive;
+   font-size: 20px;
+   text-decoration: none;
+   margin-top: 10px;
+   font-weight: bold;
+   color: white;
+}
+#Boton{
+ width: 100px;
+ height: 30px;
+ font-family: 'Edu NSW ACT Foundation', cursive;
+ margin-top: 5px;
+ border-radius: 20%;
+ color: #000;
+ background-color: white;
+ font-size: 20px;
+}
+nav{
+   background-color: #000;
+   width: 100%;
+   height: auto;
+}
+.Foto-Perfil{
+   width: 450px;
+   height: 450px;
+   border-radius: 70%;
+}
+#Sobre-Mi{
+   display: flex;
+}
+.Soy-Facundo{
+   font-family: 'Indie Flower', cursive;
+   font-size: 50px;
+   font-weight: bold;
 }
