--- a/style.css
+++ b/style.css
@@ -47,12 +47,28 @@ nav{
    width: 450px;
    height: 450px;
    border-radius: 70%;
+   margin-top: 50px;
+   margin-left: 40px;
+
 }
 #Sobre-Mi{
    display: flex;
+   background-color: #E3B23C;
+   height: 100vh;
 }
 .Soy-Facundo{
    font-family: 'Indie Flower', cursive;
-   font-size: 50px;
+   font-size: 140px;
    font-weight: bold;
+   margin-left: 70px;
+   margin-bottom: 0px;
+   color: #000;
+}
+.Full-Stack{
+   font-family: 'Indie Flower', cursive;
+   font-size: 60px;
+   font-style: italic;
+   margin-top: 10px;
+   margin-left: 150px;
+   color: black;
 }
