--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ nav{
    width: 450px;
    height: 450px;
    border-radius: 70%;
-   margin-top: 50px;
+   margin-top: 85px;
    margin-left: 40px;
 
 }
@@ -71,4 +71,29 @@ nav{
    margin-top: 10px;
    margin-left: 150px;
    color: black;
+}
+#Experiencia{
+   width: 100%;
+   height: 100vh;
+   background-color: #86A397;
+}
+.Texto-Experiencia{
+   font-family: 'Indie Flower', cursive;
+   font-size: 50px;
+   text-decoration: underline;
+}
+.Gestor{
+   font-family: 'Indie Flower', cursive;
+   margin-left: 20px;
+   
+
+}
+#LogoBW{
+   width: 60px;
+   height: 60px;
+   
+}
+#Logo-Puesto{
+   display: flex;
+   text-align: center;
 }
