--- a/style.css
+++ b/style.css
@@ -27,13 +27,12 @@ body{
 }
 #Boton{
  width: 100px;
- height: 30px;
- font-family: 'Edu NSW ACT Foundation', cursive;
- margin-top: 5px;
- border-radius: 20%;
- color: #000;
- background-color: white;
+ font-family: Arial, cursive;
+ border-radius: 28%;
+ color: white;
+ background-color: #3498db;
  font-size: 20px;
+ padding: 10px 20px 10px 20px;
 }
 nav{
    background-color: #000;
@@ -70,6 +69,7 @@ nav{
    color: black;
 }
 #Experiencia{
+   display: inline-block;
    width: 100%;
    height: 100vh;
    background-color: #86A397;
@@ -106,37 +106,40 @@ nav{
    margin-left: 33px;
 }
 #Educacion{
+   display: inline-block;
    width: 100%;
-   height: 150vh;
+   height: 100vh;
    background-color: #E26D5A;
 }
+ #contenedor-educacion{
+   display: flex;
+   margin-bottom: 50px;
+ }  
+
 #Logo-Educacion{
-   width: 400px;
+   width: 150px;
+   height: 100px;
    border-radius: 20%;
    display: inline;
-   }
-   #Centrar-Logo{
-      text-align: center;
+   
    }
    .Texto-Educacion{
       font-family: 'Indie Flower', cursive;
    }
-   #Logo-Educacion2{
-      width: 400px;
-      border-radius: 20%;
-      margin-top: 30px;
-   }
-   #Alineacion-Educacion{
-      display: flex;
-      align-items: center;
-      justify-content: space-around ;
+   #Logo-freecodecamp{
+      width: 150px;
+   height: 100px;
+   border-radius: 20%;
+   display: inline;
    }
    #Logo-OpenBootcamp{
-      width: 250px;
-      border-radius: 20%;
-      margin-right: 110px;
+      width: 150px;
+   height: 100px;
+   border-radius: 20%;
+   display: inline;
    }
    #Habilidades{
+      display: inline-block;
       width: 100%;
       height: 150vh;
       background-color: #815E5B;
@@ -169,5 +172,27 @@ progress{
    grid-column-gap: 250px;
    grid-row-gap: 250px;
    justify-items:last baseline;
-   
-   }
+    }
+#Proyectos{
+   display: inline-block;
+      width: 100%;
+      height: 120vh;
+      background-color: #6969B3;
+}
+.Pagina-tributo{
+   border-radius: 20%;
+}
+#Contenedor-Proyectos{
+   text-align: center;
+}
+footer{
+   display: inline-block;
+   width: 100%;
+   height: auto;
+   background-color: black;
+}
+.Texto-Footer{
+   text-align: center;
+   color: white;
+   font-family: 'Indie Flower', cursive;
+}
