--- a/style.css
+++ b/style.css
@@ -181,9 +181,18 @@ progress{
 }
 .Pagina-tributo{
    border-radius: 20%;
+   width: 400px;
+   height: 250px;
+   display: inline;
 }
 #Contenedor-Proyectos{
-   text-align: center;
+   display: flex;
+   align-items: center;
+   margin-bottom: 50px;
+}
+#Contenedor-Proyectos2{
+   display: flex;
+   align-items: center;
 }
 footer{
    display: inline-block;
